# mqtest-app-snap

client/: client.c  meson.build
provider/: .gitignore  meson.build  provider.c
snap/: snapcraft.yaml
